tests/should_succeed/assign.jou
from "stdlib/io.jou" import puts

def main() -> int:
    message = "Hello"
    puts(message)  # Output: Hello
    message = "Hi"
    puts(message)  # Output: Hi
    return 0
