tests/syntax_error/python_cast_int.jou
def blah() -> None:
    x = int("123")  # Error: int is not a function, use 'as int' to convert between numbers or e.g. atoi() from "stdlib/str.jou" to convert a string to int
